add profile image

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <div class="water-drop" style="width: 11px; height: 11px; left: 90%; animation-delay: 0.8s;"></div>
         
         <div class="header-content">
-            <img src="https://via.placeholder.com/150" alt="Profile" class="profile-img">
+            <img src="images/profile.jpg" alt="Profile" class="profile-img">
             <h1>နန်းအေးမဥ္ဇူနွယ်</h1>
             <p>မြေမဲ့စိုက်ပျိုးခြင်း (Hydroponics) စီမံကိန်း</p>
         </div>
